--- a/video_lecture/02_matplotlib_fundamentals/matplotlib_bar_lines.ipynb
+++ b/video_lecture/02_matplotlib_fundamentals/matplotlib_bar_lines.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 102,
    "id": "c1123dff",
    "metadata": {},
    "outputs": [
@@ -238,13 +238,13 @@
        "4         BMW   73315.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_quantity_barnd = duckdb.query(\"\"\"\n",
+    "df_quantity_brand = duckdb.query(\"\"\"\n",
     "            SELECT\n",
     "                make as Brand,\n",
     "                SUM(quantity) as Quantity\n",
@@ -255,7 +255,7 @@
     "            ORDER BY\n",
     "                Quantity DESC\n",
     "            \"\"\").df()\n",
-    "df_quantity_barnd.head()"
+    "df_quantity_brand.head()"
    ]
   },
   {
