todo assignment, more visualization on nordic and total foreign born

--- a/video_lecture/02_matplotlib_fundamentals/matplotlib_bar_lines.ipynb
+++ b/video_lecture/02_matplotlib_fundamentals/matplotlib_bar_lines.ipynb
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 103,
    "id": "4bad7750",
    "metadata": {},
    "outputs": [
@@ -630,20 +630,65 @@
        "      <td>Toyota</td>\n",
        "      <td>1885.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>358</th>\n",
+       "      <td>2016-12-01</td>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>1238.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359</th>\n",
+       "      <td>2016-12-01</td>\n",
+       "      <td>Volvo</td>\n",
+       "      <td>1235.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>Volkswagen</td>\n",
+       "      <td>1688.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>1526.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>Volvo</td>\n",
+       "      <td>1158.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>363 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        date       Brand  Quantity\n",
-       "0 2007-01-01      Toyota    2884.0\n",
-       "1 2007-01-01       Volvo     693.0\n",
-       "2 2007-01-01  Volkswagen    2521.0\n",
-       "3 2007-02-01  Volkswagen    1517.0\n",
-       "4 2007-02-01      Toyota    1885.0"
+       "          date       Brand  Quantity\n",
+       "0   2007-01-01      Toyota    2884.0\n",
+       "1   2007-01-01       Volvo     693.0\n",
+       "2   2007-01-01  Volkswagen    2521.0\n",
+       "3   2007-02-01  Volkswagen    1517.0\n",
+       "4   2007-02-01      Toyota    1885.0\n",
+       "..         ...         ...       ...\n",
+       "358 2016-12-01      Toyota    1238.0\n",
+       "359 2016-12-01       Volvo    1235.0\n",
+       "360 2017-01-01  Volkswagen    1688.0\n",
+       "361 2017-01-01      Toyota    1526.0\n",
+       "362 2017-01-01       Volvo    1158.0\n",
+       "\n",
+       "[363 rows x 3 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +709,7 @@
     "            \"\"\"\n",
     "            ).df()\n",
     "df_month_brand[\"date\"] = pd.to_datetime(df_month_brand[\"date\"], format=\"%Y-%m\")\n",
-    "df_month_brand.head()"
+    "df_month_brand"
    ]
   },
   {
