exercise 1 task 2 recreate line chart storytelling

--- a/exercises/exercise_1/ex_1/makeover.ipynb
+++ b/exercises/exercise_1/ex_1/makeover.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "id": "b49ba014",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
     "ax = df[\"Avg_CO2\"].plot(figsize=(12,8), linestyle= \"-\", linewidth= 1)\n",
     "\n",
     "# Make a graph to mark only the year\n",
-    "january_df = df[df.index.month == 1] # using pandas to fillter month to January   \n",
+    "january_df = df[df.index.month == 1] # using pandas to fillter month to choose january \n",
     "january_df.plot(\n",
     "    y=\"Avg_CO2\",\n",
     "    ax=ax,\n",
